--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 mysql-connector-python>=2.0.3
 Pygments>=2.0.2,<3.0
-networkx>=1.9.1,<2.0
+networkx>=2.5
 APScheduler>=3.0.2,<4.0
 pandas>=0.16.0
+psycopg2>=2.9.1
 python-dateutil>=2.4.2,<3.0
